# intrusion-detector

./: README.md  get-platformio.py  la1-feedback.html  welcome.txt
ProjectThing/: Documentation.md  ProjectThing.ino  camera_pins.h
TouchyThing/: Documentation.md  TouchyThing.ino  private.h  sketch.h
exercises/9LEDs/: CMakeLists.txt  README.mkd  idf3.mk  magic.sh
exercises/9LEDs/Ex03/: Ex03.ino
exercises/9LEDs/Ex04/: Ex04.ino  sketch.h
exercises/9LEDs/Ex06/: Ex06.ino
exercises/9LEDs/main/: main.cpp  sketch.h
exercises/9LEDs/sketch/: sketch.h
exercises/HelloWorld/: CMakeLists.txt  README.mkd  idf3.mk  platformio.ini
exercises/HelloWorld/Ex01/: Ex01.ino
exercises/HelloWorld/Ex02/: Ex02.ino
exercises/HelloWorld/main/: main.cpp
exercises/HelloWorld/sketch/: sketch.ino
exercises/IFTTTThing/: .gitignore  CMakeLists.txt  README.mkd  idf3.mk  sdkconfig.defaults
exercises/IFTTTThing/Ex07/: Ex07.ino  sketch.h
exercises/IFTTTThing/main/: CMakeLists.txt  component.mk  main.cpp
